--- a/application.properties
+++ b/application.properties
@@ -9,4 +9,12 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+spring.mail.host=smtp.example.com
+spring.mail.port=25
+spring.mail.username=setusername
+spring.mail.password=setpassword
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
+
+jwt.secret="m1n1m@t3sT0k3n21gn3d";
