--- a/application.properties
+++ b/application.properties
@@ -17,4 +17,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-jwt.secret="m1n1m@t3sT0k3n21gn3d";
+jwt.secret=m1n1m@t3sT0k3n21gn3d;
