--- a/application.properties
+++ b/application.properties
@@ -9,12 +9,15 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.mail.host=smtp.example.com
-spring.mail.port=25
-spring.mail.username=setusername
-spring.mail.password=setpassword
+# Configuración del servidor de correo SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=profesorprimero42@gmail.com
+spring.mail.password=minimates123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.timeout=5000
 
+# Configuración Token
 
-jwt.secret=m1n1m@t3sT0k3n21gn3d;
+jwt.secret=m1n1m@t3sT0k3n21gn3d_super_long_key_12345
