--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=proyectoDAW
 spring.jpa.hibernate.ddl-auto=update
+server.port=8081
+
 spring.datasource.url=jdbc:mysql://localhost:3306/minimatesdb
 spring.datasource.username=root
 spring.datasource.password=
@@ -7,17 +9,35 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Configuraci髇 del servidor de correo SMTP
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=profesorprimero42@gmail.com
-spring.mail.password=minimates123
+logging.level.org.springframework.data.jpa.repository.query=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.springframework.mail=DEBUG
+spring.mail.debug=true
+
+
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
+
+
+spring.aop.proxy-target-class=false
+# Habilitar el debug de Spring Mail para obtener detalles sobre la conexi贸n
+logging.level.org.springframework.mail=DEBUG
+spring.mail.debug=true
+
+# Configuraci贸n de Mailtrap SMTP
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525  
+spring.mail.username=b4b0fe3c79b9b0 
+spring.mail.password=cfbf8bfff385e6 
+spring.mail.protocol=smtp
+spring.mail.default-encoding=UTF-8
+
+# Configuraci贸n de autenticaci贸n y STARTTLS
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.timeout=5000
-
-# Configuraci髇 Token
-
-jwt.secret=m1n1m@t3sT0k3n21gn3d_super_long_key_12345
+spring.mail.properties.mail.smtp.debug=true  # Debug SMTP para ver detalles
